Remove gitter links in favor of slack

--- a/m3db.io/index.html
+++ b/m3db.io/index.html
@@ -33,7 +33,7 @@
           <ul class="menu">
             <li><a href="https://m3db.github.io/m3/">Docs</a></li>
             <li><a href="https://github.com/m3db/m3"><i class="fab fa-github"></i></a></li>
-            <li><a href="https://gitter.im/m3db/Lobby"><i class="fab fa-gitter"></i></a></li>
+            <li><a href="https://bit.ly/m3slack"><i class="fab fa-slack"></i></a></li>
             <li><a href="https://groups.google.com/forum/#!forum/m3db"><i class="fas fa-at"></i></a></li>
           </ul>
         </div>
